<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/click"
          android:title="@string/app_name"
          android:icon="@mipmap/ic_launcher"
          app:showAsAction="always"/>

    <item android:id="@+id/search"
          android:title="Search"
          app:showAsAction="never"/>

    <item android:id="@+id/action"
          android:title="Action"
          app:showAsAction="never"/>

</menu>